--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" href="/assets/logo/logo_512x512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exam Prep</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5PGV7VV7TS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-5PGV7VV7TS');
+    </script>
   </head>
   <body>
     <div id="root"></div>
