typos; cover no answer case; save progress for custom test; added filter for progress chart; added robots.txt and sitemap.xml; update README.md;

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="/assets/logo/logo_512x512.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exam Prep</title>
+    <meta name="description" content="Pregătire pentru examenul de licență la Informatică UCV. Grile, întrebări și soluții.">
+    <meta name="keywords" content="informatica, ucv, examen, licenta, grila, grile, examene, 0xdragos">
+    <meta name="author" content="0xDRAGOS">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5PGV7VV7TS"></script>
     <script>
